@@ -24,7 +24,6 @@
 import os
 import re
 import shutil
-from collections.abc import Mapping
 from io import StringIO
 from tempfile import TemporaryFile
 
@@ -413,9 +412,9 @@ class _GitSourceBase(Source):
         # and submodule_checkout_overrides dictionaries.
         self.submodule_overrides = {}
         self.submodule_checkout_overrides = {}
-        modules = self.node_get_member(node, Mapping, 'submodules', {})
+        modules = self.node_get_member(node, dict, 'submodules', {})
         for path, _ in self.node_items(modules):
-            submodule = self.node_get_member(modules, Mapping, path)
+            submodule = self.node_get_member(modules, dict, path)
             url = self.node_get_member(submodule, str, 'url', None)
 
             # Make sure to mark all URLs that are specified in the configuration
