@@ -2,6 +2,9 @@
 buildstream 1.3.1
 =================
 
+  o BREAKING CHANGE: `node_get_member` doesn't accept 'expected_type=Mapping'
+    anymore. Please use 'expected_type=dict' instead.
+
   o BREAKING CHANGE: Artifact as a Proto. The caching of buildstream artifacts
     has changed from a reference based impelementation. Existing artifacts and
     artifact servers are not compatible, as such remote artifact servers need to
